...
      BottomNavItem(
        navTitle: 'Home'.tr,
        iconSvgName: Images.icHomeSvg,
        menuCode: MenuCode.HOME,
      ),
      BottomNavItem(
          navTitle: 'Journal'.tr,
          iconSvgName: Images.icJournalSVG,
          menuCode: MenuCode.JOURNAL),
      BottomNavItem(
          navTitle: 'Insights'.tr,
          iconSvgName: Images.icInsightsSVG,
          menuCode: MenuCode.INSIGHTS),
...
